--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </head>
 
 <body>
-	<h1 class="hienluong">Hiền Lương</h1>
+	<h1 class="hienluong">Hà Thị Yến</h1>
 	<canvas id="pinkboard"></canvas>
 	<script>
 		/*
