--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 </head>
 
 <body>
-	<h1 class="hienluong">Hà Thị Yến</h1>
+	<h1 class="hienluong">Chúc mừng 20-10</h1>
+	<h1 class="hienluong">Đỗ Chúc</h1>
 	<canvas id="pinkboard"></canvas>
 	<script>
 		/*
