--- a/index.html
+++ b/index.html
@@ -38,12 +38,18 @@
 			left: 50%;
 			transform: translate(-50%, -50%);
 			color: pink;
+			display:flex;
+			justify-content:center;
+			align-items:center;
 		}
 	</style>
 </head>
 
 <body>
-	<h1 class="hienluong">Đỗ Chúc</h1>
+	<div class="hienluong">
+		<h1>Đỗ Chúc</h1>
+		<h3>Chúc em ngày càng xinh đẹp</h1>
+	</div>
 	<canvas id="pinkboard"></canvas>
 	<script>
 		/*
